--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Checkout submodules
+      uses: textbook/git-checkout-submodule-action@master
+
     - name: Build
       run: swift build -v
+
     - name: Run tests
       run: swift test -v
