--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         submodules: recursive
 
     - name: SwiftLint
-      run: swiftlint
+      run: ./swiftlint.sh
 
     - name: Build
       run: swift build -v
