--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
 
     - name: SwiftLint
       run: ./swiftlint.sh
+      env:
+        BASE_BRANCH: ${{ github.base_ref }}
 
     - name: Build
       run: swift build -v
